--- a/src/index.css
+++ b/src/index.css
@@ -36,13 +36,13 @@ Variables
 body {
   margin: 0;
   padding: 0;
-  font-family: " Rubik" sans-serif;
+  font-family: " Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .MenuDiv {
@@ -56,9 +56,10 @@ code {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 30px 0 0 15px;
+  padding: 10px 0 0 15px;
+  margin-top: 20px;
   color: var(--menuList-clr);
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-size: 17px;
   line-height: 18.96px;
@@ -68,7 +69,13 @@ code {
   padding-left: 10px;
 }
 
-.listItem:active {
+.listItem:hover {
+  background-color: var(--menu-active-clr);
+  color: var(--Header-bgc);
+  padding-bottom: 25px;
+}
+
+.active {
   color: var(--menu-active-clr);
 }
 
@@ -114,7 +121,7 @@ code {
 
 .searchInp::-moz-placeholder {
   color: var(--menuList-clr);
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
@@ -122,7 +129,7 @@ code {
 
 .searchInp::placeholder {
   color: var(--menuList-clr);
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
@@ -145,14 +152,14 @@ code {
 
 .userName {
   color: var(--menuList-clr);
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 16px;
 }
 
 .userRole {
   color: var(--userInfo-clr);
   font-style: Medium;
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 600;
   font-size: 14px;
 }
@@ -162,12 +169,9 @@ code {
   justify-content: space-between;
 }
 
-.Body {
-  margin-top: 130px;
-}
-
 .courseDiv {
-  margin: auto;
+  width: 90%;
+  margin: 8rem auto;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -250,6 +254,7 @@ code {
 }
 
 .paymentDiv {
+  margin-top: 8rem;
   padding-top: 20px;
 }
 
@@ -306,7 +311,7 @@ code {
 .dashboardDiv {
   width: 1080px;
   padding: 0 20px;
-  margin: 0 5rem 0 30px;
+  margin: 8rem 5rem 0 30px;
 }
 
 .welcomeDiv {
@@ -575,8 +580,8 @@ code {
   left: 0px;
   top: 0px;
   border-radius: 8px;
-  padding: 8px 16px 8px 16px;
-  margin-top: 20px;
+  padding: 8px 16px;
+  margin-top: 10px;
   background-color: var(--payment-clr);
 }
 
@@ -590,12 +595,19 @@ code {
   color: var(--primary-clr);
 }
 
+.upcoming {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  padding-top: 20px;
+  text-align: left;
+  color: var(--btn-clicked-clr);
+}
+
 .lessonTime {
   font-family: "Rubik";
   font-size: 12px;
   font-weight: 500;
-  line-height: 14px;
-  letter-spacing: 0em;
   text-align: left;
   color: var(--primary-clr);
 }
@@ -1461,4 +1473,53 @@ code {
   color: var(--time-clr);
   right: 10px;
   top: 12px;
+}
+
+.react-calendar {
+  width: 350px;
+  max-width: 100%;
+  background: white;
+  border: unset;
+  font-family: "Rubik", sans-serif;
+  color: var(--btn-disabled-clr);
+  line-height: 3em;
+}
+
+.react-calendar,
+.react-calendar *,
+.react-calendar *:before,
+.react-calendar *:after {
+  box-sizing: border-box;
+}
+
+.react-calendar__month-view__weekdays {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.75em;
+}
+
+.react-calendar__month-view__days__day--weekend {
+  color: #d10000;
+}
+
+.react-calendar__month-view__days__day--neighboringMonth {
+  color: #757575;
+}
+
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
+  background-color: #e6e6e6;
+}
+
+.react-calendar__tile--now {
+  background: var(--btn-disabled-clr);
+  color: var(--Header-bgc);
+}
+
+.react-calendar__tile--now:enabled:hover,
+.react-calendar__tile--now:enabled:focus {
+  background: var(--Header-bgc);
+  color: var(--btn-disabled-clr);
+  box-shadow: 0 0 2px var(--neutral-clr);
 }/*# sourceMappingURL=index.css.map */
